[tool.poetry]
name = "twitter-sql"
version = "0.1.0"
description = ""
authors = ["rlivermorejr <rlivermorejr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mimesis = "^4.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
